--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          </section>
          <!-- resume section -->
           <section class="resume">
-            <h3 class="section-title">A summary of My Resume</h3>
+            <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
@@ -141,8 +141,25 @@
             </div>
           </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href="#"><img src="./images/icons/facebook.png" alt=""></a>
+                <a href="#"><img src="./images/icons/insta.png" alt=""></a>
+                <a href="#"><img src="./images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Massage"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 
